* FEA#7601 Forbid endorsement cancellation on reduced contracts

Version 1.14 - 2017-11-09
* FEA#6682 Module Creation