@@ -1,3 +1,4 @@
+* FEA#7616 Ajout d'un assistant permettant l'annulation de la mise en réduction d'un contrat
 * FEA#7601 Interdiction de l'annulation d'avenant sur les contrats mis en réduction
 
 Version 1.14 - 2017-11-09
