@@ -1,3 +1,4 @@
+* FEA#7616 Add a wizard which allows cancelling a contract's reduction
 * FEA#7601 Forbid endorsement cancellation on reduced contracts
 
 Version 1.14 - 2017-11-09
